[package]
name = "evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.1"
bevy_prototype_lyon = "0.4"
rand = "0.8.5"

[dev-dependencies.bevy]
version = "0.6.1"
features = ["dynamic"]
